# wingpanel-indicator-keyboard

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: KeyboardIcon.css  keyboard.appdata.xml.in  keyboard.gresource.xml  keyboard.gschema.xml  keyboard.gschema.xml.in  keyboard.metainfo.xml.in  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  ae.po  af.po  ak.po  ar.po  ast.po  az.po  ba.po  bg.po  bo.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  en_ZA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  (+55 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
src/: CMakeLists.txt  Indicator.vala  InputSource.vala  KeyboardIcon.vala  KeyboardStatusIndicator.vala  LayoutButton.vala  LayoutManager.vala  LayoutsManager.vala  PopoverWidget.vala
src/Services/: LayoutsHandler.vala  LayoutsManager.vala
src/Widgets/: Icon.vala  LayoutButton.vala
